--- a/10.2.0/angular/src/app/nurse/edit-appoinment/edit-appoinment.component.html
+++ b/10.2.0/angular/src/app/nurse/edit-appoinment/edit-appoinment.component.html
@@ -65,8 +65,8 @@
         <div class="row mt-3">
             <div class="col-md-12 d-flex flex-column">
                 <label for="buttondisplay"> Reason </label>
-                <textarea pTextarea [(ngModel)]="appointment.reasonForVisit" name="reasonForVisit" placeholder="Reason for visit"
-                    rows="3" class="w-100" required></textarea>
+                <textarea pTextarea [(ngModel)]="appointment.reasonForVisit" name="reasonForVisit"
+                    placeholder="Reason for visit" rows="3" class="w-100" required></textarea>
             </div>
         </div>
     </div>
