--- a/10.2.0/angular/src/app/doctors/create-prescriptions/create-prescriptions.component.html
+++ b/10.2.0/angular/src/app/doctors/create-prescriptions/create-prescriptions.component.html
@@ -8,7 +8,8 @@
       <div class="col-md-12">
         <div class="d-flex justify-content-between align-items-center">
           <b>Select Patient</b>
-          <p-button label="Add New Patient" variant="text" severity="info" />
+          <p-button label="Add New Patient" variant="text" severity="info"  *ngIf="showAddPatientButton"
+                        (onClick)="showCreatePatientDialog()" />
         </div>
         <p-select [(ngModel)]="prescription.patientId" name="patientId" [options]="patients" [optionValue]="'id'"
           optionLabel="fullName" placeholder="Select a patient" class="w-100" required (onChange)="LoadAppoinments()" />
