--- a/10.2.0/angular/src/app/master-table/master-table.component.css
+++ b/10.2.0/angular/src/app/master-table/master-table.component.css
@@ -11,7 +11,7 @@
   background: white;
   border-radius: 12px;
   padding: 1.5rem;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
   cursor: pointer;
   transition: all 0.3s ease;
   display: flex;
@@ -23,7 +23,7 @@
 
 .action-card:hover {
   transform: translateY(-5px);
-  box-shadow: 0 10px 15px rgba(0,0,0,0.1);
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
   border-color: #d1d5db;
 }
 
@@ -33,6 +33,10 @@
 
 .diagnosis-card {
   border-left: 4px solid #22c55e;
+}
+
+.department-card {
+  border-left: 4px solid orange;
 }
 
 .card-icon {
@@ -54,6 +58,11 @@
 .diagnosis-card .card-icon {
   background: #dcfce7;
   color: #166534;
+}
+
+.department-card .card-icon {
+  background: rgb(245, 212, 151);
+  color: rgb(185, 123, 8);
 }
 
 .card-content h3 {
@@ -80,7 +89,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .report-card .card-badge {
@@ -91,4 +100,9 @@
 .diagnosis-card .card-badge {
   color: #166534;
   border: 1px solid #bbf7d0;
+}
+
+.department-card .card-badge {
+  color: rgb(163, 135, 82);
+  border: 1px solid rgb(240, 186, 87);
 }
