--- a/10.2.0/angular/src/app/patient/patient-profile/patient-profile.component.html
+++ b/10.2.0/angular/src/app/patient/patient-profile/patient-profile.component.html
@@ -4,7 +4,7 @@
     <div class="modal-body" *ngIf="patientDetailsAndMedicalHistory">
         <div class="card p-3">
             <div class="Patient-details text-center">
-                <img class="rounded-circle" src="https://medixpro.vercel.app/colorful-abstract-shapes.png" />
+                <img class="rounded-circle" src="https://dreamsemr.dreamstechnologies.com/html/template/assets/img/patients/patient-03.jpg" />
                 <h2 class="font-patient-name">{{patientDetailsAndMedicalHistory.fullName}}</h2>
                 <p class="text-muted-foreground">{{calculateAgeDisplay(patientDetailsAndMedicalHistory.dateOfBirth)}} •
                     {{patientDetailsAndMedicalHistory.gender}}</p>
