--- a/10.2.0/angular/src/app/billing-staff/invoices/invoices.component.html
+++ b/10.2.0/angular/src/app/billing-staff/invoices/invoices.component.html
@@ -106,13 +106,14 @@
                                         {{ 'TotalAmount' | localize }}
                                         <p-sortIcon field="totalAmount"></p-sortIcon>
                                     </th>
-                                    <th style="min-width: 150px" pSortableColumn="paymentStatus">
-                                        {{ 'PaymentStatus' | localize }}
-                                        <p-sortIcon field="paymentStatus"></p-sortIcon>
+                                    <th style="min-width: 150px">
+                                        {{ 'RemainingAmount' | localize }}
                                     </th>
-                                    <th style="min-width: 30px" pSortableColumn="paymentMethod">
+                                    <th style="min-width: 150px" >
+                                        {{ 'PaymentStatus' | localize }}
+                                    </th>
+                                    <th style="min-width: 30px" >
                                         {{ 'PaymentMethod' | localize }}
-                                        <p-sortIcon field="paymentMethod"></p-sortIcon>
                                     </th>
                                     <th style="min-width: 130px">
                                         {{ 'Actions' | localize }}
@@ -130,6 +131,11 @@
                                     <td>
                                         <span>
                                             {{ record.totalAmount }}
+                                        </span>
+                                    </td>
+                                    <td>
+                                        <span>
+                                            {{ record.totalAmount-record.amountPaid }}
                                         </span>
                                     </td>
                                     <td>
