--- a/10.2.0/angular/src/app/patient/edit-patients/edit-patients.component.html
+++ b/10.2.0/angular/src/app/patient/edit-patients/edit-patients.component.html
@@ -63,24 +63,24 @@
     </div>
   </div>
     <!-- Insurance Provider -->
-  <div class="form-group row">
+  <!-- <div class="form-group row">
     <label class="col-md-3 col-form-label" for="insuranceProvider">Insurance Provider</label>
     <div class="col-md-9">
       <input type="text" id="insuranceProvider" name="insuranceProvider" class="form-control" required
              [(ngModel)]="patientData.insuranceProvider" (ngModelChange)="onInputChange()" #insuranceproviderModel="ngModel" #insuranceproviderEl>
       <abp-validation-summary [control]="insuranceproviderModel" [controlEl]="insuranceproviderEl"></abp-validation-summary>
             </div>
-  </div>
+  </div> -->
 
     <!-- Insurance Policy Number -->
-  <div class="form-group row">
+  <!-- <div class="form-group row">
     <label class="col-md-3 col-form-label" for="policyNumber">Insurance Policy Number</label>
     <div class="col-md-9">
       <input type="text" id="policyNumber" name="policyNumber" class="form-control" required
              [(ngModel)]="patientData.insurancePolicyNumber" (ngModelChange)="onInputChange()" #insurancepolicyModel="ngModel" #insurancepolocyEl>
       <abp-validation-summary [control]="insurancepolicyModel" [controlEl]="insurancepolocyEl"></abp-validation-summary>
     </div>
-  </div>
+  </div> -->
 
   <!-- Assigned Nurse -->
   <div class="form-group row">
@@ -106,33 +106,32 @@
   </div>
 
   <!-- Is Admitted -->
-  <div class="form-group row">
+  <!-- <div class="form-group row">
     <label class="col-md-3 col-form-label">Is Admitted</label>
     <div class="col-md-9">
       <input type="checkbox" name="isAdmitted" [(ngModel)]="patientData.isAdmitted" (change)="onAdmitChange()">
     </div>
-  </div>
+  </div> -->
 
   <!-- Admission Date -->
-  <div class="form-group row" [class.required]="patientData.isAdmitted">
+  <div class="form-group row" >
     <label class="col-md-3 col-form-label" for="admissionDate">Admission Date</label>
     <div class="col-md-9">
       <input type="date" id="admissionDate" name="admissionDate" class="form-control"
-             [(ngModel)]="patientData.admissionDate" (ngModelChange)="onInputChange()" [disabled]="!patientData.isAdmitted"
-             #admissionModel="ngModel" #admissionEl>
-      <abp-validation-summary [control]="admissionModel" [controlEl]="admissionEl"></abp-validation-summary>
+             [(ngModel)]="patientData.admissionDate" (ngModelChange)="onInputChange()">
+      <!-- <abp-validation-summary [control]="admissionModel" [controlEl]="admissionEl"></abp-validation-summary> -->
     </div>
   </div>
 
   <!-- Discharge Date -->
-  <div class="form-group row">
+  <!-- <div class="form-group row">
     <label class="col-md-3 col-form-label" for="dischargeDate">Discharge Date</label>
     <div class="col-md-9">
       <input type="date" id="dischargeDate" name="dischargeDate" class="form-control"
              [(ngModel)]="patientData.dischargeDate" (ngModelChange)="onInputChange()" #dischargeModel="ngModel" #dischargeEl>
       <abp-validation-summary [control]="dischargeModel" [controlEl]="dischargeEl"></abp-validation-summary>
     </div>
-  </div>
+  </div> -->
 
 
 
