--- a/10.2.0/angular/src/app/pharmacist/pharmacist-prescriptions/pharmacist-prescriptions.component.html
+++ b/10.2.0/angular/src/app/pharmacist/pharmacist-prescriptions/pharmacist-prescriptions.component.html
@@ -112,17 +112,17 @@
                                     </td>
                                     <td>
                                         <span>
-                                            Dr. {{ record.doctor.fullName }}
+                                        {{ record.nurse.fullName }}
                                         </span>
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.issueDate| date: 'dd/MM/yyyy' }}
+                                            {{ record.orderDate| date: 'dd/MM/yyyy' }}
                                         </span>
                                     </td>
                                     <td>
                                         <div *ngFor="let itm of record.items">
-                                            <span>{{ itm.medicineName}} {{itm.dosage}} ({{itm.frequency}})</span>
+                                            <span>{{ itm.medicineName}} {{itm.dosage}} ({{itm.quantity}})</span>
                                         </div>
                                     </td>
                                     <td>
