--- a/10.2.0/angular/src/app/users/select-patient-role/select-patient-role.component.html
+++ b/10.2.0/angular/src/app/users/select-patient-role/select-patient-role.component.html
@@ -5,7 +5,7 @@
     <div class="col-md-9">
       <div *ngFor="let gender of genders" class="form-check form-check-inline">
         <input class="form-check-input" type="radio" name="gender" [id]="'gender_' + gender" [value]="gender"
-               [(ngModel)]="patient.gender" (ngModelChange)="onInputChange()" required #genderModel="ngModel" #genderEl>
+          [(ngModel)]="patient.gender" (ngModelChange)="onInputChange()" required #genderModel="ngModel" #genderEl>
         <label class="form-check-label" [for]="'gender_' + gender">{{ gender }}</label>
       </div>
     </div>
@@ -15,8 +15,8 @@
   <div class="form-group row required">
     <label class="col-md-3 col-form-label" for="dob">Date of Birth</label>
     <div class="col-md-9">
-      <input type="date" id="dob" name="dob" class="form-control" required
-             [(ngModel)]="patient.dateOfBirth" (ngModelChange)="onInputChange()" #dobModel="ngModel" #dobEl>
+      <input type="date" id="dob" name="dob" class="form-control" required [(ngModel)]="patient.dateOfBirth"
+        (ngModelChange)="onInputChange()" #dobModel="ngModel" #dobEl>
       <abp-validation-summary [control]="dobModel" [controlEl]="dobEl"></abp-validation-summary>
     </div>
   </div>
@@ -25,8 +25,8 @@
   <div class="form-group row required">
     <label class="col-md-3 col-form-label" for="address">Address</label>
     <div class="col-md-9">
-      <textarea id="address" name="address" rows="3" class="form-control" required
-                [(ngModel)]="patient.address" (ngModelChange)="onInputChange()" #addressModel="ngModel" #addressEl></textarea>
+      <textarea id="address" name="address" rows="3" class="form-control" required [(ngModel)]="patient.address"
+        (ngModelChange)="onInputChange()" #addressModel="ngModel" #addressEl></textarea>
       <abp-validation-summary [control]="addressModel" [controlEl]="addressEl"></abp-validation-summary>
     </div>
   </div>
@@ -35,8 +35,8 @@
   <div class="form-group row required">
     <label class="col-md-3 col-form-label" for="bloodGroup">Blood Group</label>
     <div class="col-md-9">
-      <select id="bloodGroup" name="bloodGroup" class="form-control" required
-              [(ngModel)]="patient.bloodGroup" (ngModelChange)="onInputChange()" #bloodGroupModel="ngModel" #bloodGroupEl>
+      <select id="bloodGroup" name="bloodGroup" class="form-control" required [(ngModel)]="patient.bloodGroup"
+        (ngModelChange)="onInputChange()" #bloodGroupModel="ngModel" #bloodGroupEl>
         <option *ngFor="let bg of bloodGroups" [value]="bg">{{ bg }}</option>
       </select>
       <abp-validation-summary [control]="bloodGroupModel" [controlEl]="bloodGroupEl"></abp-validation-summary>
@@ -48,7 +48,8 @@
     <label class="col-md-3 col-form-label" for="emergencyName">Emergency Contact Name</label>
     <div class="col-md-9">
       <input type="text" id="emergencyName" name="emergencyName" class="form-control" required
-             [(ngModel)]="patient.emergencyContactName" (ngModelChange)="onInputChange()" #emergencyNameModel="ngModel" #emergencyNameEl>
+        [(ngModel)]="patient.emergencyContactName" (ngModelChange)="onInputChange()" #emergencyNameModel="ngModel"
+        #emergencyNameEl>
       <abp-validation-summary [control]="emergencyNameModel" [controlEl]="emergencyNameEl"></abp-validation-summary>
     </div>
   </div>
@@ -58,12 +59,13 @@
     <label class="col-md-3 col-form-label" for="emergencyNumber">Emergency Contact Number</label>
     <div class="col-md-9">
       <input type="text" id="emergencyNumber" name="emergencyNumber" class="form-control" required
-             [(ngModel)]="patient.emergencyContactNumber" (ngModelChange)="onInputChange()" #emergencyNumberModel="ngModel" #emergencyNumberEl>
+        [(ngModel)]="patient.emergencyContactNumber" (ngModelChange)="onInputChange()" #emergencyNumberModel="ngModel"
+        #emergencyNumberEl>
       <abp-validation-summary [control]="emergencyNumberModel" [controlEl]="emergencyNumberEl"></abp-validation-summary>
     </div>
   </div>
-    <!-- Insurance Provider -->
-  <div class="form-group row">
+  <!-- Insurance Provider -->
+  <!-- <div class="form-group row">
     <label class="col-md-3 col-form-label" for="insuranceProvider">Insurance Provider</label>
     <div class="col-md-9">
       <input type="text" id="insuranceProvider" name="insuranceProvider" class="form-control" required
@@ -73,32 +75,32 @@
   </div>
 
     <!-- Insurance Policy Number -->
-  <div class="form-group row">
+  <!--<div class="form-group row">
     <label class="col-md-3 col-form-label" for="policyNumber">Insurance Policy Number</label>
     <div class="col-md-9">
       <input type="text" id="policyNumber" name="policyNumber" class="form-control" required
              [(ngModel)]="patient.insurancePolicyNumber" (ngModelChange)="onInputChange()" #insurancepolicyModel="ngModel" #insurancepolocyEl>
       <abp-validation-summary [control]="insurancepolicyModel" [controlEl]="insurancepolocyEl"></abp-validation-summary>
     </div>
-  </div>
+  </div> -->
 
   <!-- Assigned Nurse -->
   <div class="form-group row">
     <label class="col-md-3 col-form-label" for="nurse">Assigned Nurse</label>
     <div class="col-md-9">
-      <select id="nurse" name="nurse" class="form-control"
-              [(ngModel)]="patient.assignedNurseId" (ngModelChange)="onInputChange()">
+      <select id="nurse" name="nurse" class="form-control" [(ngModel)]="patient.assignedNurseId"
+        (ngModelChange)="onInputChange()">
         <option [ngValue]="null">-- Select Nurse --</option>
         <option *ngFor="let nurse of nurseList" [ngValue]="nurse.id">{{ nurse.fullName }}</option>
       </select>
     </div>
   </div>
- <!-- Assigned Doctor -->
-   <div class="form-group row">
+  <!-- Assigned Doctor -->
+  <div class="form-group row">
     <label class="col-md-3 col-form-label" for="doctor">Assigned Doctor</label>
     <div class="col-md-9">
-      <select id="doctor" name="doctor" class="form-control" 
-              [(ngModel)]="patient.assignedDoctorId" (ngModelChange)="onInputChange()">
+      <select id="doctor" name="doctor" class="form-control" [(ngModel)]="patient.assignedDoctorId"
+        (ngModelChange)="onInputChange()">
         <option [ngValue]="null">-- Select Doctor --</option>
         <option *ngFor="let doctor of doctorList" [ngValue]="doctor.id">{{ doctor.fullName }}</option>
       </select>
@@ -106,33 +108,69 @@
   </div>
 
   <!-- Is Admitted -->
-  <div class="form-group row">
+  <!-- <div class="form-group row">
     <label class="col-md-3 col-form-label">Is Admitted</label>
     <div class="col-md-9">
       <input type="checkbox" name="isAdmitted" [(ngModel)]="patient.isAdmitted" (change)="onAdmitChange()">
     </div>
-  </div>
+  </div> -->
 
   <!-- Admission Date -->
-  <div class="form-group row" [class.required]="patient.isAdmitted">
+  <div class="form-group row">
     <label class="col-md-3 col-form-label" for="admissionDate">Admission Date</label>
     <div class="col-md-9">
       <input type="date" id="admissionDate" name="admissionDate" class="form-control"
-             [(ngModel)]="patient.admissionDate" (ngModelChange)="onInputChange()" [disabled]="!patient.isAdmitted"
-             #admissionModel="ngModel" #admissionEl>
-      <abp-validation-summary [control]="admissionModel" [controlEl]="admissionEl"></abp-validation-summary>
+        [(ngModel)]="patient.admissionDate" (ngModelChange)="onInputChange()">
+      <!-- <abp-validation-summary [control]="admissionModel" [controlEl]="admissionEl"></abp-validation-summary> -->
+    </div>
+  </div>
+  <div class="form-group row required">
+    <label class="col-md-3 col-form-label" for="billingMethod">Billing Method</label>
+    <div class="col-md-9">
+      <select id="billingMethod" name="billingMethod" class="form-control" required [(ngModel)]="patient.billingMethod"
+        (ngModelChange)="onInputChange()" #billingModel="ngModel" #billingEl>
+        <option [ngValue]="null">-- Select Billing Method --</option>
+        <option *ngFor="let method of billingMethods" [ngValue]="method.value">{{ method.label }}</option>
+      </select>
+      <abp-validation-summary [control]="billingModel" [controlEl]="billingEl"></abp-validation-summary>
+    </div>
+  </div>
+  <div class="form-group row required"  *ngIf="patient.billingMethod === BillingMethod._1 || patient.billingMethod === BillingMethod._2">
+    <label class="col-md-3 col-form-label" for="depositAmount">Deposit Amount</label>
+    <div class="col-md-9">
+      <input type="number" id="depositAmount" name="depositAmount" class="form-control" required
+        [(ngModel)]="patient.depositAmount" (ngModelChange)="onInputChange()" #depositAmountModel="ngModel"
+        #depositAmountEl>
+      <abp-validation-summary [control]="depositAmountModel" [controlEl]="depositAmountEl"></abp-validation-summary>
     </div>
   </div>
 
+  <div class="form-group row required"
+    *ngIf="patient.billingMethod === BillingMethod._1 || patient.billingMethod === BillingMethod._2">
+    <label class="col-md-3 col-form-label" for="paymentMethod">Payment Method</label>
+    <div class="col-md-9">
+      <select id="paymentMethod" name="paymentMethod" class="form-control" required [(ngModel)]="patient.paymentMethod"
+        (ngModelChange)="onInputChange()" #paymentModel="ngModel" #paymentEl>
+        <option [ngValue]="null">-- Select Payment Method --</option>
+        <option *ngFor="let method of paymentMethodOptions" [ngValue]="method.value">{{ method.label }}</option>
+      </select>
+      <abp-validation-summary [control]="paymentModel" [controlEl]="paymentEl"></abp-validation-summary>
+    </div>
+  </div>
+
+  
+
+
+
   <!-- Discharge Date -->
-  <div class="form-group row">
+  <!-- <div class="form-group row">
     <label class="col-md-3 col-form-label" for="dischargeDate">Discharge Date</label>
     <div class="col-md-9">
       <input type="date" id="dischargeDate" name="dischargeDate" class="form-control"
              [(ngModel)]="patient.dischargeDate" (ngModelChange)="onInputChange()" #dischargeModel="ngModel" #dischargeEl>
       <abp-validation-summary [control]="dischargeModel" [controlEl]="dischargeEl"></abp-validation-summary>
     </div>
-  </div>
+  </div> -->
 
 
 
