--- a/10.2.0/angular/src/app/master-table/add-data-dialog/add-data-dialog.component.html
+++ b/10.2.0/angular/src/app/master-table/add-data-dialog/add-data-dialog.component.html
@@ -1,54 +1,26 @@
-
-  <div class="p-fluid p-3">
-    <div class="field mb-4">
-      <label for="name" class="block font-medium mb-2">
-        <!-- {{ dataType === 'report' ? 'Report' : 'Diagnosis' }} Name * -->
-        {{ getLabel() }} Name *
-      </label>
-      <input 
-        pInputText 
-        id="name" 
-        type="text" 
-        [(ngModel)]="name" 
-        class="w-full" 
-        autocomplete="off"
-        (keyup.enter)="save()"
-        placeholder="Enter {{ getLabel().toLowerCase() }} name..."
-        [disabled]="saving"
-      />
-    </div>
-    <div class="field mb-4">
-      <label for="price" class="block font-medium mb-2">
-        {{ dataType === 'report' ? 'Report' : 'Diagnosis' }} Price *
-      </label>
-      <input 
-        pInputText 
-        id="price" 
-        type="number" 
-        [(ngModel)]="price" 
-        class="w-full" 
-        autocomplete="off"
-        (keyup.enter)="save()"
-        placeholder="Enter {{ dataType === 'report' ? 'report' : 'diagnosis' }} price..."
-        [disabled]="saving"
-      />
-    </div>
-    
-    <div class="flex justify-content-end gap-2">
-      <button pButton 
-        type="button" 
-        label="Cancel" 
-        icon="pi pi-times" 
-        class="p-button-text" 
-        (click)="cancel()"
-        [disabled]="saving">
-      </button>
-      <button pButton 
-        type="button" 
-        label="Save" 
-        icon="pi pi-check" 
-        [disabled]="isSaveDisabled()" 
-        (click)="save()">
-      </button>
-    </div>
+<div class="p-fluid p-3">
+  <div class="field mb-4">
+    <label for="name" class="block font-medium mb-2">
+      {{ getLabel() }} Name *
+    </label>
+    <input pInputText id="name" type="text" [(ngModel)]="name" class="w-full" autocomplete="off" (keyup.enter)="save()"
+      placeholder="Enter {{ getLabel().toLowerCase() }} name..." [disabled]="saving" />
   </div>
+
+  <!-- Show price field only for reports -->
+  <div class="field mb-4" *ngIf="dataType === 'report'">
+    <label for="price" class="block font-medium mb-2">
+      Report Price *
+    </label>
+    <input pInputText id="price" type="number" [(ngModel)]="price" class="w-full" autocomplete="off"
+      (keyup.enter)="save()" placeholder="Enter report price..." [disabled]="saving" />
+  </div>
+
+  <div class="flex justify-content-end gap-2">
+    <button pButton type="button" label="Cancel" icon="pi pi-times" class="p-button-text" (click)="cancel()"
+      [disabled]="saving">
+    </button>
+    <button pButton type="button" label="Save" icon="pi pi-check" [disabled]="isSaveDisabled()" (click)="save()">
+    </button>
+  </div>
+</div>
