--- a/10.2.0/angular/src/app/nurse/edit-appoinment/edit-appoinment.component.html
+++ b/10.2.0/angular/src/app/nurse/edit-appoinment/edit-appoinment.component.html
@@ -44,7 +44,7 @@
             <div class="col-md-6 d-flex flex-column">
                 <label for="buttondisplay"> Appointment Date </label>
                 <p-datepicker [(ngModel)]="appointment.appointmentDate" name="appointmentDate" [showIcon]="true"
-                    placeholder="Select appointment date" required />
+                    placeholder="Select appointment date" [minDate]="tomorrow" required />
             </div>
             <div class="col-md-6">
                 <div class="row">
