--- a/10.2.0/angular/src/app/pharmacist/pharmacist-prescriptions/pharmacist-prescriptions.component.html
+++ b/10.2.0/angular/src/app/pharmacist/pharmacist-prescriptions/pharmacist-prescriptions.component.html
@@ -86,9 +86,9 @@
                                         Patient
                                         <p-sortIcon field="patientName"></p-sortIcon>
                                     </th>
-                                    <th style="min-width: 150px" pSortableColumn="doctorName">
-                                        Doctor
-                                        <p-sortIcon field="doctorName"></p-sortIcon>
+                                    <th style="min-width: 150px" pSortableColumn="nurseName">
+                                        Nurse
+                                        <p-sortIcon field="nurseName"></p-sortIcon>
                                     </th>
                                     <th style="min-width: 150px">
                                         Date
