add room functionality in master table

--- a/10.2.0/angular/src/app/master-table/add-data-dialog/add-data-dialog.component.css
+++ b/10.2.0/angular/src/app/master-table/add-data-dialog/add-data-dialog.component.css
@@ -23,3 +23,11 @@
 .gap-2 {
   gap: 0.5rem;
 }
+
+:host ::ng-deep .p-multiselect {
+  width: 100% !important;
+}
+
+:host ::ng-deep .p-multiselect-panel {
+  width: 100% !important;
+}
